fixed contact botton text alignment for safari

--- a/src/components/Roldev/Banner.css
+++ b/src/components/Roldev/Banner.css
@@ -41,6 +41,9 @@
     width: 100%;
     flex-direction: row;
     justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-box-pack: center;
 }
 
 .buttons a {
